removed requirement for internal user to make it easier to run in Singularity; added FFMPEG dependencies

--- a/fiji-openjdk-8/Dockerfile
+++ b/fiji-openjdk-8/Dockerfile
@@ -6,33 +6,23 @@
 FROM openjdk:8
 
 # Define maintainer.
-LABEL maintainer="https://gitter.im/fiji/fiji"
+LABEL maintainer="Janelia Scientific Computing"
 
-# Create a user.
-RUN useradd -u 1000 -ms /bin/bash fiji
-RUN mkdir /opt/fiji && chown fiji:fiji /opt/fiji
-USER fiji
+# Install FFMPEG dependencies for H5J
+RUN apt-get update && apt-get install -y libxcb1 libxcb-shm0 libxcb-shape0 libxcb-xfixes0 libasound2
 
-# Define working directory.
+# Install Fiji
 WORKDIR /opt/fiji
-
-# Install Fiji.
-RUN wget -q https://downloads.imagej.net/fiji/latest/fiji-nojre.zip \
- && unzip fiji-nojre.zip \
- && rm fiji-nojre.zip
+RUN curl -sL https://downloads.imagej.net/fiji/latest/fiji-nojre.zip | jar xv \
+    && chmod +x /opt/fiji/Fiji.app/ImageJ-linux64
 
 # Add fiji to the PATH
 ENV PATH $PATH:/opt/fiji/Fiji.app
 
 # Define entrypoint.
-COPY --chown=fiji:fiji entrypoint.sh /opt/fiji
-ENTRYPOINT ["./entrypoint.sh"]
-
-# Update URLs use https
-RUN ./entrypoint.sh --update edit-update-site ImageJ https://update.imagej.net/
-RUN ./entrypoint.sh --update edit-update-site Fiji https://update.fiji.sc/
-RUN ./entrypoint.sh --update edit-update-site Java-8 https://sites.imagej.net/Java-8/
+COPY entrypoint.sh /opt/fiji
+ENTRYPOINT ["/opt/fiji/entrypoint.sh"]
 
 # Run once to create Java preferences.
-COPY --chown=fiji:fiji demo.py /opt/fiji/
-RUN ./entrypoint.sh --headless --ij2 --console --run ./demo.py 'name="test"'
+COPY demo.py /opt/fiji/
+RUN /opt/fiji/entrypoint.sh --headless --ij2 --console --run /opt/fiji/demo.py 'name="test"'
